13-Ingress-ExternalDNS-Domain-Name-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-DomainName-Based-Routing-app1-2-3.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: eapp1.steigerwaldfamily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app1-nginx-clusterip-service
              servicePort: 80
    - host: eapp2.steigerwaldfamily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app2-nginx-clusterip-service
              servicePort: 80
    - host: eapp3.steigerwaldfamily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: usermgmt-webapp-clusterip-service
              servicePort: 80
